--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,16 +9,10 @@ name = "speedtest"
 main = "worker.js"
 compatibility_date = "2024-12-24"
 
-# 1. HTML is imported as Text (module string)
 [[rules]]
 type = "Text"
-globs = ["*.html"]
-
-# 2. client.js is imported as Text (module string)
-#    This prevents Wrangler from trying to compile the React code as worker logic
-[[rules]]
-type = "Text"
-globs = ["client.js"]
+globs = ["*.html", "client.js"]
+fallthrough = false
 
 [observability]
 enabled = true
