--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "version": "1.0.0",
     "scripts": {
         "deploy": "chmod +x deploy.sh && ./deploy.sh",
-        "dev": "npx wrangler dev"
+        "dev": "npx wrangler dev",
+        "postinstall": "chmod +x deploy.sh && ./deploy.sh --setup-only"
+    },
+    "devDependencies": {
+        "wrangler": "^3.0.0"
     }
 }
